---
source: compiler-core/src/type_/tests/errors.rs
expression: "import rakun/wibble.{type Wobble}"
---
error: Unknown module type
  ┌─ /src/one/two.rakun:1:22
  │
1 │ import rakun/wibble.{type Wobble}
  │                      ^^^^^^^^^^^ Did you mean `Wobble`?

`Wobble` is only a value, it cannot be imported as a type.
